--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -1,2 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Challenge 1</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src='main.js'></script>
+  </body>
+</html>
 
