--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -1,2 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Challenge 2</title>
+  </head>
+  <body>
+    <div id='app'></div>
+    <script src='main.js'></script>
+  </body>
+</html>
 
